App/static/style.css
.site-footer {
  background-color: #000000;
  text-align: center;
  position: fixed;
  bottom:0px;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  height: 120px;
}

#social-wrapper {
  text-align: center;
}
  
/*Social Media Icons*/
.social-wrapper {
  text-align: center;
}
  
.social-wrapper ul li {
  display: inline;
  margin: 0 5px;
}

#main-nav-logo {
  width: 200px;
}

#main-nav-logo > * img {
  max-width: 100%;
  max-height: 100%;
}

#user-nav-profile {
  display: inline-block;
  position: relative;
  height: 60px;
  padding: 5px;
  margin-left: 10px;
}

#user-nav-profile > img {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  object-fit: cover;
}

.tiktok-icon,
.facebook-icon,
.instagram-icon{
  margin-top: .625em;
  width: 40px;
  height: 40px;
  border-radius: 25px;
}

.footer p {
  text-align: center;
  background-color: #c20605;
  color: white;
}

